@@ -11,9 +11,6 @@ use constant DEBUG => $ENV{MORBO_DEBUG} || 0;
 has listen => sub { [] };
 has watch  => sub { [qw/lib templates/] };
 
-# Cache stats
-my $STATS = {};
-
 # "All in all, this is one day Mittens the kitten won’t soon forget.
 #  Kittens give Morbo gas.
 #  In lighter news, the city of New New York is doomed.
@@ -25,9 +22,10 @@ sub check_file {
   # Check if modify time and/or size have changed
   my ($size, $mtime) = (stat $file)[7, 9];
   return unless defined $mtime;
-  my $stats = $STATS->{$file} ||= [$^T, $size];
+  my $cache = $self->{cache} ||= {};
+  my $stats = $cache->{$file} ||= [$^T, $size];
   return if $mtime <= $stats->[0] && $size == $stats->[1];
-  $STATS->{$file} = [$mtime, $size];
+  $cache->{$file} = [$mtime, $size];
 
   return 1;
 }
@@ -182,7 +180,7 @@ the following new ones.
 
 =head2 C<check_file>
 
-  $morbo->check_file('script/myapp');
+  my $success = $morbo->check_file('/home/sri/lib/MyApp.pm');
 
 Check if file has been modified since last check.
 
